# fm4ar

./: .gitignore  LICENSE  README.md  pyproject.toml
atmospheric_retrieval/: dataset.py
dingo/core/nn/: cfnets.py  nsf.py
dingo/core/posterior_models/: cflow_base.py  normalizing_flow.py
dingo/core/utils/: __init__.py
examples/train_dir/: train_settings.yaml
experiments/fmpe-template/: config.yaml
experiments/importance-sampling-template/: importance_sampling.yaml
experiments/nested-sampling-template/: config.yaml
experiments/npe-template/: config.yaml
experiments/templates/fmpe/: config.yaml
experiments/templates/importance-sampling/: importance_sampling.yaml
experiments/templates/nested-sampling/: config.yaml
experiments/templates/npe/: config.yaml
experiments/templates/unconditional-flow/: config.yaml
experiments/unconditional-flow-template/: config.yaml
fm4ar/datasets/: __init__.py  ardevol_martinez_2022.py  base_classes.py  data_transforms.py  dataset.py  goyal_2020.py  noise.py  scaling.py  standardization.py  theta_scalers.py  toy_dataset.py
fm4ar/datasets/ardevol_martinez_2022/: __init__.py
fm4ar/datasets/goyal_2020/: __init__.py
fm4ar/datasets/toy_dataset/: __init__.py
fm4ar/datasets/vasist_2023/: __init__.py  prior.py  simulation.py  simulator.py
fm4ar/importance_sampling/: config.py  proposals.py  target_spectrum.py  utils.py
fm4ar/likelihoods/: __init__.py  config.py
fm4ar/models/: base.py  build_model.py  fmpe.py  npe.py
fm4ar/models/continuous/: base.py  flow_matching.py  model.py
fm4ar/models/discrete/: model.py  normalizing_flow.py
fm4ar/nested_sampling/: __init__.py  config.py  likelihood.py  plotting.py  posteriors.py  priors.py  samplers.py  simulators.py  utils.py
fm4ar/nn/: embedding_nets.py  flows.py  fnet.py  mlp.py  modules.py  nsf.py  resnets.py  vectorfield_nets.py
fm4ar/priors/: __init__.py  base.py  config.py
fm4ar/simulators/: __init__.py  base.py  config.py
fm4ar/target_spectrum/: __init__.py
fm4ar/torchutils/: dataloaders.py  early_stopping.py  general.py  gradient_clipping.py  logprob_evaluation.py  optimizers.py  schedulers.py  weights.py
fm4ar/training/: args.py  preparation.py  stages.py  train_validate.py  wandb.py
fm4ar/unconditional_flow/: config.py
fm4ar/utils/: config.py  create_experiment_dir.py  distributions.py  environment.py  git_utils.py  hashing.py  hdf.py  htcondor.py  ieee754.py  misc.py  multiproc.py  paths.py  plotting.py  resampling.py  shapes.py  timeout.py  torchutils.py  tracking.py
jupyter/aaai-workshop/: cornerplot-and-jsds.ipynb  optimal-transport.ipynb
scripts/aaai-workshop/: jsd-table.py  measure-simulation-time.py  spectrum-residuals.py
scripts/auxiliary/determine_tolerance/: config.yaml  determine_tolerance.py
scripts/auxiliary/logprobs_under_model/: logprobs_under_model.py
scripts/auxiliary/measure_inference_time/: fmpe.yaml  measure_inference_time.py  npe.yaml
scripts/auxiliary/measure_simulator_time/: measure_simulator_time.py  vasist-2023.yaml
scripts/datasets/ardevol-martinez-2022/: 02_compute_standardization_parameters.py  create_test_file.py  download_data.py
scripts/datasets/goyal-2020/: 01_create_hdf_files.py
scripts/datasets/toy-dataset/: 01_simulate_spectra.py  02_merge_hdf_files.py
scripts/datasets/vasist-2023/: 00_rebin_opacities.py  01_simulate_spectra.py  02_merge_hdf_files.py  03_filter_spectra.py  03_select_spectra.py  03_simulate_benchmark.py  03_simulate_target.py  04_compute_standardization_parameters.py  04_create_test_set.py  04_fix_test_set.py  05_create_misspecified_case.py  run.sub
scripts/evaluation/: aggregate_test_set_runs.py  collect_quantiles.py  draw_samples.py  evaluate_densities.py  evaluate_model.py  merge_hdf_files.py
scripts/hdf/: check_hdf_dataset_for_duplicates.py  fix_broken_nautilus_checkpoint.py  get_hdf_head.py  rename_datasets.py
scripts/importance_sampling/: aggregate_test_set_runs.py  create_corner_plot.py  create_test_set_runs.py  merge_hdf_files.py  minimize_hdf_file.py  plot_ppc.py  run_importance_sampling.py
scripts/nested_sampling/: demo_config.yaml  run_nested_sampling.py  run_sampler.py
scripts/nested_sampling/dynesty/: run_dynesty.py
scripts/nested_sampling/nautilus/: run_nautilus.py
scripts/plotting/cornerplot/: create_plot.py
scripts/plotting/cornerplots/: create_plot.py
scripts/plotting/jsd-distributions/: create_plot.py  gaussian.yaml
scripts/plotting/marginals/: config.yaml  create_plot.py
scripts/plotting/pp-plots/: config.yaml  create_plot.py
scripts/plotting/quantile-plots/: create_plot.py
scripts/plotting/sampling-efficiencies/: create_plot.py  gaussian.yaml
scripts/plotting/sampling-efficiency/: create_plot.py
scripts/plotting/spectra/: config.yaml  create_plot.py
scripts/plotting/train-set-size-effect/: create_plot.py  default.yaml  gaussian.yaml
scripts/plotting/vectorfield-illustration/: 01_create_train_set.py  02_train_model.py  03_draw_samples.py  config.yaml
scripts/precompute/: precompute_pca_components.py
scripts/sweep/: create_sweep.py
scripts/sweep/fm-sweep-1/: base.yaml  sweep.yaml
scripts/sweep/fm-sweep-2/: base.yaml  sweep.yaml
scripts/sweep/fm-sweep-3/: base.yaml  sweep.yaml
scripts/training/: pretrain_transformer.py  train_cluster.py  train_dummy.py  train_embedding.py  train_local.py  train_unconditional_flow.py
scripts/utils/: count_parameters.py  measure_simulation_time.py  update_config_in_checkpoint.py
tests/integration/: test__fm.py  test__fmpe.py  test__npe.py  test__samplers.py
tests/manual/: dataloader.py  manual.py  run_torchinfo.py  test-vasist-2023-dataset.py
tests/unit/datasets/: test__ardevol_martinez_2022.py  test__data_transforms.py  test__datasets.py  test__noise.py  test__scaling.py  test__theta_scalers.py  test__vasist_2023.py
tests/unit/importance_sampling/: test__config.py  test__proposals.py  test__target_spectrum.py  test__utils.py
tests/unit/likelihoods/: test__likelihoods.py
tests/unit/models/: test__build_model.py
training/: train_pipeline.py  train_pipeline_condor.py
(+67 files in other folders)
